# k8s-cloud

./: .gitignore  LICENSE  README.md  cluster-setup.yaml  config.yaml  destroy.yaml  hosts.yaml  index.yaml  inventory.template.yaml  pyproject.toml  requirements.yaml  secrets.yaml  setup.yaml
.github/workflows/: release.yaml
apps/authproxy/: Chart.yaml  values.yaml
apps/mail-stack/: values.yaml
apps/sso-stack/: values.yaml
charts/: .gitignore
charts/admin-rbac/: Chart.yaml  values.yaml
charts/apps/: index.yaml
charts/authproxy/: values.yaml
charts/backup-stack/: .gitignore  Chart.yaml  values.yaml
charts/cert-manager/: Chart.yaml  values.yaml
charts/cert-stack/: Chart.yaml  values.yaml
charts/chat-stack/: Chart.yaml  values.yaml
charts/cicd-stack/: Chart.yaml  values.yaml
charts/cilium/: Chart.yaml  values.yaml
charts/cloud-stack/: Chart.yaml  README.md  values.yaml
charts/cluster-storage/: Chart.yaml  values.yaml
charts/config/: index.yaml
charts/control-stack/: Chart.yaml  values.yaml
charts/crypto-storage/: Chart.yaml  values.yaml
charts/custom-template/: Chart.yaml  values.yaml
charts/default-snapshot-class/: Chart.yaml
charts/dns-stack/: Chart.yaml  values.yaml
charts/erp-stack/: Chart.yaml  values.yaml
charts/erpnext-stack/: Chart.yaml
charts/homepage-stack/: Chart.yaml  values.yaml
charts/ingress-stack/: Chart.yaml  values.yaml
charts/k3s-auto-upgrade/: Chart.yaml  values.yaml
charts/k3s-auto-upgrade-plan/: Chart.yaml
charts/k8s-dashboard/: Chart.yaml  values.yaml
cluster/: .gitignore  README.md  inventory.template.yaml  requirements.txt  requirements.yaml  setup.yaml
clusters/: .gitignore
docs/: how-to-remove-nodes.md  ref-prior-knowledge.md
playbooks/: join-token  setup.yaml
scripts/: snapshot-cleanup.ipynb
utils/: clear_known_hosts.yaml
(+312 files in other folders)
