[project]
name = "k8s-cloud"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13,<4.0"
license = { text = "MIT" }
authors = [
	{ name = "Lorenzo Wormer", email = "l.wormer@mailbox.org" }
]
dependencies = [
	"ansible>=13.5.0,<14",
	"jmespath>=1.0.1,<2",
	"psutil>=7.2.2,<8",
	"kubernetes>=35.0.0,<36",
	"tqdm>=4.67.1,<5",
]

[dependency-groups]
dev = [
	"ansible-lint>=6,<7; platform_system != 'Windows'",
	"jupyter>=1.0.0,<2",
	"pandas>=3.0.2,<4",
	"openpyxl>=3.1.2,<4",
]

[tool.uv]
package = false
default-groups = ["dev"]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
